[gd_scene load_steps=6 format=3 uid="uid://bk0kh63ksvk3f"]

[ext_resource type="Script" path="res://title.gd" id="1_pgbsu"]
[ext_resource type="Texture2D" uid="uid://c1w0ijr1qbvra" path="res://assets/img/background_PLACEHOLDER.jpeg" id="2_13n48"]
[ext_resource type="AudioStream" uid="uid://b3kpro4fotgmr" path="res://assets/music/track2.mp3" id="3_plb3h"]
[ext_resource type="Texture2D" uid="uid://cmobhc0nkamuw" path="res://assets/img/icon/settings.jpeg" id="3_r2og3"]
[ext_resource type="AudioStream" uid="uid://o78rm2a86fsy" path="res://assets/sfx/click.mp3" id="5_am5de"]

[node name="TextureRect" type="TextureRect"]
show_behind_parent = true
clip_children = 2
offset_left = -72.0
offset_top = -7.0
offset_right = 1293.0
offset_bottom = 833.0
texture = ExtResource("2_13n48")
stretch_mode = 1
flip_h = true

[node name="Title" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_right = 12.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pgbsu")

[node name="MarginContainer" type="MarginContainer" parent="Title"]
layout_mode = 0
offset_left = 389.0
offset_top = 222.0
offset_right = 895.0
offset_bottom = 323.0

[node name="VBoxContainer" type="VBoxContainer" parent="Title/MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="Title/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="Title"]
stream = ExtResource("3_plb3h")
autoplay = true
bus = &"music"

[node name="RichTextLabel" type="RichTextLabel" parent="Title"]
layout_mode = 0
offset_left = 527.0
offset_top = 124.0
offset_right = 838.0
offset_bottom = 187.0
theme_override_font_sizes/normal_font_size = 40
text = "Cable Game!"

[node name="MarginContainer2" type="MarginContainer" parent="Title"]
layout_mode = 0
offset_left = 1036.0
offset_top = 614.0
offset_right = 1212.0
offset_bottom = 652.0

[node name="VBoxContainer" type="VBoxContainer" parent="Title/MarginContainer2"]
layout_mode = 2

[node name="Options" type="Button" parent="Title/MarginContainer2/VBoxContainer"]
layout_mode = 2
text = "Options"
icon = ExtResource("3_r2og3")
expand_icon = true

[node name="MarginContainer3" type="MarginContainer" parent="Title"]
layout_mode = 0
offset_left = 60.0
offset_top = 618.0
offset_right = 231.0
offset_bottom = 656.0

[node name="VBoxContainer" type="VBoxContainer" parent="Title/MarginContainer3"]
layout_mode = 2

[node name="Quit" type="Button" parent="Title/MarginContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "Quit"

[node name="SfxPlayer" type="AudioStreamPlayer" parent="Title"]
stream = ExtResource("5_am5de")
bus = &"sfx"

[connection signal="pressed" from="Title/MarginContainer/VBoxContainer/Play" to="Title" method="_on_play_pressed"]
[connection signal="finished" from="Title/MusicPlayer" to="Title" method="_on_audio_finished"]
[connection signal="pressed" from="Title/MarginContainer2/VBoxContainer/Options" to="Title" method="_on_options_pressed"]
[connection signal="pressed" from="Title/MarginContainer3/VBoxContainer/Quit" to="Title" method="_on_quit_pressed"]
